Document Number on LiP apps plus Sonar Fix